# twitch-mcp

./: .gitignore  .mcp.json.example  .mcpbignore  CLAUDE.md  QA_TEST_MATRIX.md  README.md  manifest.json  mcpb_pyproject.toml  mcpb_server.py  pyproject.toml
.github/workflows/: publish.yml  release-mcpb.yml  test.yml
issues/: 001-fix-sdk-bugs.md  002-regenerate-token-with-scopes.md  003-add-app-token-support.md  004-retest-after-fixes.md  005-credentials-setup-ux.md  006-qa-and-next-steps.md
scripts/: mock_event_handler.py  simulate_hype_stream.sh  stream_event_listener.py
src/twitch_mcp/: __init__.py  server.py  setup.py
src/twitch_mcp/tools/: __init__.py  ads.py  analytics.py  bits.py  channel_points.py  channels.py  charity.py  chat.py  clips.py  eventsub.py  games.py  goals.py  guest_star.py  hype_train.py  moderation.py  polls.py  predictions.py  raids.py  schedule.py  search.py  streams.py  subscriptions.py  teams.py  users.py  videos.py  whispers.py
