[tool.poetry]
name = "twitch-mcp"
version = "0.1.1"
description = "MCP server exposing Twitch SDK as tools for AI assistants"
authors = ["ldraney"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/ldraney/twitch-mcp"
repository = "https://github.com/ldraney/twitch-mcp"
keywords = ["twitch", "mcp", "ai", "claude", "tools", "streaming", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications :: Chat",
    "Framework :: AsyncIO",
]
packages = [{include = "twitch_mcp", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
twitch-sdk = "^0.1.1"
mcp = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"

[tool.poetry.scripts]
twitch-mcp = "twitch_mcp.server:main"
eventsub-listen = "twitch_mcp.eventsub.listener:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
